--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <button class="btn btn-primary">Aggiungi Libro</button>
                         </div>
 
-                        <div class="row g-0 px-3 py-2 text-muted fw-bold border-bottom bg-light d-none d-md-flex">
+                        <div class="row px-3 py-2 text-muted fw-bold border-bottom bg-light d-none d-md-flex">
                             <div class="col-md-5">Titolo</div>
                             <div class="col-md-3">Data prestito</div>
                             <div class="col-md-2">Stato</div>
@@ -79,7 +79,7 @@
 
                         <div class="card-body p-0">
 
-                            <div class="row g-0 book-item align-items-center px-3">
+                            <div class="row book-item align-items-center px-3 py-2 bg-light">
                                 <div class="col-12 col-md-5 fw-bold">I pilastri della terra</div>
                                 <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">-</div>
                                 <div class="col-6 col-md-2" data-label="Stato:">
@@ -93,7 +93,7 @@
                                 </div>
                             </div>
 
-                            <div class="row g-0 book-item align-items-center px-3">
+                            <div class="row book-item align-items-center px-3 mb-2">
                                 <div class="col-12 col-md-5 fw-bold">Il signore degli anelli</div>
                                 <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">18/10/2023</div>
                                 <div class="col-6 col-md-2" data-label="Stato:">
@@ -107,7 +107,7 @@
                                 </div>
                             </div>
 
-                            <div class="row g-0 book-item align-items-center px-3">
+                            <div class="row book-item align-items-center px-3 mb-2">
                                 <div class="col-12 col-md-5 fw-bold">Il codice Da Vinci</div>
                                 <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">-</div>
                                 <div class="col-6 col-md-2" data-label="Stato:">
@@ -121,7 +121,7 @@
                                 </div>
                             </div>
 
-                            <div class="row g-0 book-item align-items-center px-3">
+                            <div class="row book-item align-items-center px-3 mb-2">
                                 <div class="col-12 col-md-5 fw-bold">I pilastri della terra</div>
                                 <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">-</div>
                                 <div class="col-6 col-md-2" data-label="Stato:">
@@ -135,7 +135,7 @@
                                 </div>
                             </div>
 
-                            <div class="row g-0 book-item align-items-center px-3">
+                            <div class="row book-item align-items-center px-3 mb-2">
                                 <div class="col-12 col-md-5 fw-bold">Il signore degli anelli</div>
                                 <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">18/10/2023</div>
                                 <div class="col-6 col-md-2" data-label="Stato:">
@@ -149,7 +149,7 @@
                                 </div>
                             </div>
 
-                            <div class="row g-0 book-item align-items-center px-3">
+                            <div class="row book-item align-items-center px-3 mb-2">
                                 <div class="col-12 col-md-5 fw-bold">Il codice Da Vinci</div>
                                 <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">-</div>
                                 <div class="col-6 col-md-2" data-label="Stato:">
