inserimento Divina Coommedia

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                         <div class="card-body p-0">
 
-                            <div class="row book-item align-items-center px-3 py-2 bg-light">
+                            <div class="row book-item align-items-center px-3 pt-3 pb-4 bg-body-secondary">
                                 <div class="col-12 col-md-5 fw-bold">I pilastri della terra</div>
                                 <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">-</div>
                                 <div class="col-6 col-md-2" data-label="Stato:">
@@ -93,36 +93,8 @@
                                 </div>
                             </div>
 
-                            <div class="row book-item align-items-center px-3 mb-2">
-                                <div class="col-12 col-md-5 fw-bold">Il signore degli anelli</div>
-                                <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">18/10/2023</div>
-                                <div class="col-6 col-md-2" data-label="Stato:">
-                                    <span class="badge bg-warning text-dark">In prestito</span>
-                                </div>
-                                <div class="col-6 col-md-2 text-end">
-                                    <button class="btn btn-sm btn-outline-secondary"><i
-                                            class="bi bi-pencil"></i></button>
-                                    <button class="btn btn-sm btn-outline-danger ms-1"><i
-                                            class="bi bi-trash"></i></button>
-                                </div>
-                            </div>
-
-                            <div class="row book-item align-items-center px-3 mb-2">
-                                <div class="col-12 col-md-5 fw-bold">Il codice Da Vinci</div>
-                                <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">-</div>
-                                <div class="col-6 col-md-2" data-label="Stato:">
-                                    <span class="badge bg-danger">Non disponibile</span>
-                                </div>
-                                <div class="col-6 col-md-2 text-end">
-                                    <button class="btn btn-sm btn-outline-secondary"><i
-                                            class="bi bi-pencil"></i></button>
-                                    <button class="btn btn-sm btn-outline-danger ms-1"><i
-                                            class="bi bi-trash"></i></button>
-                                </div>
-                            </div>
-
-                            <div class="row book-item align-items-center px-3 mb-2">
-                                <div class="col-12 col-md-5 fw-bold">I pilastri della terra</div>
+                            <div class="row book-item align-items-center pt-3 pb-4 px-3 mb-2">
+                                <div class="col-12 col-md-5 fw-bold">I promessi sposi</div>
                                 <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">-</div>
                                 <div class="col-6 col-md-2" data-label="Stato:">
                                     <span class="badge bg-success">Disponibile</span>
@@ -135,7 +107,7 @@
                                 </div>
                             </div>
 
-                            <div class="row book-item align-items-center px-3 mb-2">
+                            <div class="row book-item align-items-center pt-3 pb-4 px-3 mb-2 bg-body-secondary">
                                 <div class="col-12 col-md-5 fw-bold">Il signore degli anelli</div>
                                 <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">18/10/2023</div>
                                 <div class="col-6 col-md-2" data-label="Stato:">
@@ -149,11 +121,53 @@
                                 </div>
                             </div>
 
-                            <div class="row book-item align-items-center px-3 mb-2">
+                            <div class="row book-item align-items-center pt-3 pb-4 px-3 mb-2">
+                                <div class="col-12 col-md-5 fw-bold">Harry Potter e la pietra filosofale</div>
+                                <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">-</div>
+                                <div class="col-6 col-md-2" data-label="Stato:">
+                                    <span class="badge bg-success">Disponibile</span>
+                                </div>
+                                <div class="col-6 col-md-2 text-end">
+                                    <button class="btn btn-sm btn-outline-secondary"><i
+                                            class="bi bi-pencil"></i></button>
+                                    <button class="btn btn-sm btn-outline-danger ms-1"><i
+                                            class="bi bi-trash"></i></button>
+                                </div>
+                            </div>
+
+                            <div class="row book-item align-items-center pt-3 pb-4 px-3 mb-2 bg-body-secondary">
                                 <div class="col-12 col-md-5 fw-bold">Il codice Da Vinci</div>
                                 <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">-</div>
                                 <div class="col-6 col-md-2" data-label="Stato:">
                                     <span class="badge bg-danger">Non disponibile</span>
+                                </div>
+                                <div class="col-6 col-md-2 text-end">
+                                    <button class="btn btn-sm btn-outline-secondary"><i
+                                            class="bi bi-pencil"></i></button>
+                                    <button class="btn btn-sm btn-outline-danger ms-1"><i
+                                            class="bi bi-trash"></i></button>
+                                </div>
+                            </div>
+
+                            <div class="row book-item align-items-center pt-3 pb-4 px-3 mb-2">
+                                <div class="col-12 col-md-5 fw-bold">Shining</div>
+                                <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">-</div>
+                                <div class="col-6 col-md-2" data-label="Stato:">
+                                    <span class="badge bg-success">Disponibile</span>
+                                </div>
+                                <div class="col-6 col-md-2 text-end">
+                                    <button class="btn btn-sm btn-outline-secondary"><i
+                                            class="bi bi-pencil"></i></button>
+                                    <button class="btn btn-sm btn-outline-danger ms-1"><i
+                                            class="bi bi-trash"></i></button>
+                                </div>
+                            </div>
+
+                            <div class="row book-item align-items-center pt-3 pb-4 px-3 mb-2 bg-body-secondary">
+                                <div class="col-12 col-md-5 fw-bold">La Divina Commedia</div>
+                                <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">21/09/2023</div>
+                                <div class="col-6 col-md-2" data-label="Stato:">
+                                    <span class="badge bg-warning">In prestito</span>
                                 </div>
                                 <div class="col-6 col-md-2 text-end">
                                     <button class="btn btn-sm btn-outline-secondary"><i
