--- a/index.html
+++ b/index.html
@@ -205,6 +205,20 @@
                                 </div>
                             </div>
 
+                            <div class="row book-item align-items-center pt-3 pb-4 px-3 mb-2 bg-body-secondary">
+                                <div class="col-12 col-md-5 fw-bold">Le cronache di Narnia: il leone, la strega e l'armadio</div>
+                                <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">25/07/2023</div>
+                                <div class="col-6 col-md-2" data-label="Stato:">
+                                    <span class="badge bg-warning">In prestito</span>
+                                </div>
+                                <div class="col-6 col-md-2 text-end">
+                                    <button class="btn btn-sm btn-outline-secondary"><i
+                                            class="bi bi-pencil"></i></button>
+                                    <button class="btn btn-sm btn-outline-danger ms-1"><i
+                                            class="bi bi-trash"></i></button>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
