prova secondo metodo

--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
                             <button class="btn btn-primary">Aggiungi Libro</button>
                         </div>
 
-                        <div class="row px-3 py-2 text-muted fw-bold border-bottom bg-light d-none d-md-flex">
+                        <div class="col-lg-6">
+
+                        </div>
+
+                        <!-- <div class="row px-3 py-2 text-muted fw-bold border-bottom bg-light d-none d-md-flex">
                             <div class="col-md-5">Titolo</div>
                             <div class="col-md-3">Data prestito</div>
                             <div class="col-md-2">Stato</div>
@@ -80,7 +84,7 @@
                         <div class="card-body p-0">
 
                             <div class="row book-item align-items-center px-3 pt-3 pb-4 bg-body-secondary">
-                                <div class="col-12 col-md-5 fw-bold">I pilastri della terra</div>
+                                <div class="col-12 col-md-5">I pilastri della terra</div>
                                 <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">-</div>
                                 <div class="col-6 col-md-2" data-label="Stato:">
                                     <span class="badge bg-success">Disponibile</span>
@@ -94,7 +98,7 @@
                             </div>
 
                             <div class="row book-item align-items-center pt-3 pb-4 px-3 mb-2">
-                                <div class="col-12 col-md-5 fw-bold">I promessi sposi</div>
+                                <div class="col-12 col-md-5">I promessi sposi</div>
                                 <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">-</div>
                                 <div class="col-6 col-md-2" data-label="Stato:">
                                     <span class="badge bg-success">Disponibile</span>
@@ -108,7 +112,7 @@
                             </div>
 
                             <div class="row book-item align-items-center pt-3 pb-4 px-3 mb-2 bg-body-secondary">
-                                <div class="col-12 col-md-5 fw-bold">Il signore degli anelli</div>
+                                <div class="col-12 col-md-5">Il signore degli anelli</div>
                                 <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">18/10/2023</div>
                                 <div class="col-6 col-md-2" data-label="Stato:">
                                     <span class="badge bg-warning text-dark">In prestito</span>
@@ -122,7 +126,7 @@
                             </div>
 
                             <div class="row book-item align-items-center pt-3 pb-4 px-3 mb-2">
-                                <div class="col-12 col-md-5 fw-bold">Harry Potter e la pietra filosofale</div>
+                                <div class="col-12 col-md-5">Harry Potter e la pietra filosofale</div>
                                 <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">-</div>
                                 <div class="col-6 col-md-2" data-label="Stato:">
                                     <span class="badge bg-success">Disponibile</span>
@@ -136,7 +140,7 @@
                             </div>
 
                             <div class="row book-item align-items-center pt-3 pb-4 px-3 mb-2 bg-body-secondary">
-                                <div class="col-12 col-md-5 fw-bold">Il codice Da Vinci</div>
+                                <div class="col-12 col-md-5">Il codice Da Vinci</div>
                                 <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">-</div>
                                 <div class="col-6 col-md-2" data-label="Stato:">
                                     <span class="badge bg-danger">Non disponibile</span>
@@ -150,7 +154,7 @@
                             </div>
 
                             <div class="row book-item align-items-center pt-3 pb-4 px-3 mb-2">
-                                <div class="col-12 col-md-5 fw-bold">Shining</div>
+                                <div class="col-12 col-md-5">Shining</div>
                                 <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">-</div>
                                 <div class="col-6 col-md-2" data-label="Stato:">
                                     <span class="badge bg-success">Disponibile</span>
@@ -164,7 +168,7 @@
                             </div>
 
                             <div class="row book-item align-items-center pt-3 pb-4 px-3 mb-2 bg-body-secondary">
-                                <div class="col-12 col-md-5 fw-bold">La Divina Commedia</div>
+                                <div class="col-12 col-md-5">La Divina Commedia</div>
                                 <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">21/09/2023</div>
                                 <div class="col-6 col-md-2" data-label="Stato:">
                                     <span class="badge bg-warning">In prestito</span>
@@ -178,7 +182,7 @@
                             </div>
 
                             <div class="row book-item align-items-center pt-3 pb-4 px-3 mb-2">
-                                <div class="col-12 col-md-5 fw-bold">Il trono di spade</div>
+                                <div class="col-12 col-md-5">Il trono di spade</div>
                                 <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">-</div>
                                 <div class="col-6 col-md-2" data-label="Stato:">
                                     <span class="badge bg-success">Disponibile</span>
@@ -192,7 +196,7 @@
                             </div>
 
                             <div class="row book-item align-items-center pt-3 pb-4 px-3 mb-2 bg-body-secondary">
-                                <div class="col-12 col-md-5 fw-bold">Il mondo di Sofia</div>
+                                <div class="col-12 col-md-5">Il mondo di Sofia</div>
                                 <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">-</div>
                                 <div class="col-6 col-md-2" data-label="Stato:">
                                     <span class="badge bg-warning">Non disponibile</span>
@@ -205,8 +209,8 @@
                                 </div>
                             </div>
 
-                            <div class="row book-item align-items-center pt-3 pb-4 px-3 mb-2 bg-body-secondary">
-                                <div class="col-12 col-md-5 fw-bold">Le cronache di Narnia: il leone, la strega e l'armadio</div>
+                            <div class="row book-item align-items-center pt-3 pb-4 px-3 mb-2">
+                                <div class="col-12 col-md-5">Le cronache di Narnia: il leone, la strega e l'armadio</div>
                                 <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">25/07/2023</div>
                                 <div class="col-6 col-md-2" data-label="Stato:">
                                     <span class="badge bg-warning">In prestito</span>
@@ -220,7 +224,7 @@
                             </div>
 
                             <div class="row book-item align-items-center pt-3 pb-4 px-3 mb-2 bg-body-secondary">
-                                <div class="col-12 col-md-5 fw-bold">Il piccolo principe</div>
+                                <div class="col-12 col-md-5">Il piccolo principe</div>
                                 <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">-</div>
                                 <div class="col-6 col-md-2" data-label="Stato:">
                                     <span class="badge bg-success">Disponibile</span>
@@ -233,8 +237,8 @@
                                 </div>
                             </div>
 
-                            <div class="row book-item align-items-center pt-3 pb-4 px-3 mb-2 bg-body-secondary">
-                                <div class="col-12 col-md-5 fw-bold">La storia infinita</div>
+                            <div class="row book-item align-items-center pt-3 pb-4 px-3 mb-2">
+                                <div class="col-12 col-md-5">La storia infinita</div>
                                 <div class="col-12 col-md-3 text-muted" data-label="Data prestito:">-</div>
                                 <div class="col-6 col-md-2" data-label="Stato:">
                                     <span class="badge bg-success">Disponibile</span>
@@ -247,7 +251,7 @@
                                 </div>
                             </div>
 
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
