--- a/index.html
+++ b/index.html
@@ -63,18 +63,13 @@
             <div class="row">
 
                 <div class="col-lg-8">
-                    <div class=" mb-4">
-                        <div
-                            class="d-flex justify-content-between align-items-center bg-white p-3">
+                    <div class="mb-4">
+                        <div class="d-flex justify-content-between align-items-center bg-white py-3">
                             <h2 class="h4 mb-0">Catalogo Libri</h2>
                             <button class="btn btn-primary">Aggiungi Libro</button>
                         </div>
 
-                        <div class="col-lg-6">
-
-                        </div>
-
-                        <!-- <div class="row px-3 py-2 text-muted fw-bold border-bottom bg-light d-none d-md-flex">
+                        <div class="row px-3 py-2 text-muted fw-bold border-bottom bg-light d-none d-md-flex">
                             <div class="col-md-5">Titolo</div>
                             <div class="col-md-3">Data prestito</div>
                             <div class="col-md-2">Stato</div>
@@ -251,7 +246,7 @@
                                 </div>
                             </div>
 
-                        </div> -->
+                        </div>
                     </div>
                 </div>
 
